<resources>
    <string name="app_name">MovileNext_Aula4_LoginApp</string>
    <string name="email_hint">Type your email</string>
    <string name="password_hint">Type your password</string>
    <string name="login">Login</string>
</resources>
